# robofang

./: .env  .env.example  .gitignore  .semgrep.yml  AGENTS.md  ASSESSMENT.md  ASSESSMENT_2026-03-10.md  ASSESSMENT_2026-03-13.md  ASSESSMENT_2026-04-04.md  ASSESSMENT_2026-04-19.md  ASSESSMENT_2026-06-12.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  PRD.md  PRD_v2.md  README.md  README_20260312_045331.md.bak  README_20260312_045744.md.bak  docker-compose.monitoring.yml  fleet_analysis.json  fleet_manifest.yaml  glama.json  justfile  openfang_test.db  pyproject.toml  pyproject.toml.backup  pytest_final.txt  pytest_final_check.txt  pytest_output.txt  robofang_test.db  ruff_errors.txt  run_bridge_console.bat  run_bridge_console.ps1  scratch_refactor.py  setup.ps1  start.bat  start.ps1  start_all.ps1  test_c_mapping.wsb  (+1 more)
.github/workflows/: ci.yml  docs-sync.yml  release.yml  security.yml
configs/: capability_policies.yaml  council_advisers.json  council_debate_prompt.md  federation_map.json  federation_map.json.backup  grafana-dashboard-provider.yml  grafana-datasources.yml  llm_model_tiers.json  mcp_config_template.json  mcp_sidecars.json  openfang_tool_mapping.json  prometheus.yml  promtail-config.yml  vault_policies.yaml
configs/dashboards/: robofang-bridge.json
containers/: Dockerfile.grafana  Dockerfile.loki  Dockerfile.prometheus  Dockerfile.promtail  agent_template.wsb
dashboard/: README.md  package-lock.json  package.json  start.bat  start.ps1  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  App.tsx.backup  index.css  index.css.backup
data/: openfang.db  robofang.db
data/benchmarks/: council_results_1772024971.json  council_results_1772024985.json  council_results_1772025059.json  council_results_1772025166.json  council_results_1772029474.json  council_results_1772029828.json
docs/: ADVANCED_FEATURES.md  AGENTIC_MESH_INTEGRATION.md  AGENTIC_OS_PHILOSOPHY.md  AGENTS_CHANNEL_AND_MOLTBOOK.md  API_REFERENCE.md  ARCHITECTURE.md  BRIDGE_ANALYSIS.md  CHANGELOG.md  CHAT_UX.md  CLI_TOOLBELT.md  CODING_STANDARDS.md  COGNITIVE_ARCHITECTURE.md  COMMAND_VIA_EMAIL_TELEGRAM.md  COMPETITION.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_LANDSCAPE.md  CONTRIBUTING_MCP_AND_HANDS.md  CONTROL_PLANE.md  COUNCIL.md  COUNCIL_QUICK_START.md  DOCS_STRUCTURE_AND_RAG.md  EMBODIED_SENTIENCE.md  EXTERNAL_AGENT_SECURITY_SCANNERS.md  FEDERATION.md  FINANCIAL_BASTION.md  FLEET.md  FLEET_INTEGRATION.md  FRIEND_GROUP_AND_JANITOR_LLMS.md  HANDS.md  HARDWARE.md  HUB_RESEARCH_TASKS.md  INBOX_COMMANDS.md  INJECTION_SHIELD.md  INSTALL.md  INSTALLATION.md  INTEGRATIONS.md  JUST.md  LLM_RESOURCE_ROUTING.md  MCP_FLEET.md  MCP_HANDS_AND_COUNCIL.md  (+41 more)
docs/apple/: IOS_APP_PLAN.md  README.md
docs/architecture/: AGENTIC_MESH_ARCHITECTURE.md  OPENAI_AGENTS_SDK_PROPOSAL.md
docs/integrations/: MCP_TOOLS_ROADMAP.md  README.md  RELEASEBOT_TOOL_SPEC.md  bumi-mcp.md  deepfang.md  resonite.md  unity3d.md
docs/mcp-servers/: advanced-memory-mcp.md  avatar-mcp.md  docker-mcp.md  filesystem-mcp.md  immich-mcp.md  local-llm-mcp.md  notion-mcp.md  osc-mcp.md  resonite-mcp.md  robotics-mcp.md  vrchat-mcp.md
docs/skills/: openfang-operator.md  robofang-operator.md
docs/standards/: AGENT_PROTOCOLS.md  FASTMCP3_UPGRADE_STRATEGY.md  MCP_TOOL_DOCSTRINGS_IMPROVEMENT_PLAN.md  WEBAPP_PORTS.md
docs/zed/: ACP_INTEGRATION_GUIDE.md  ACP_OVERVIEW.md  CURSOR_AS_AGENT.md  README.md  ROBOFANG_ACP_ROADMAP.md  ZED_AS_CLIENT.md
exchange/synthesized/: resonite_vlm_consensus.md  test_adjudication_session_consensus.md
hands/yahboom-mcp/: README.md  pyproject.toml
hands/yahboom-mcp/src/yahboom_mcp/: __init__.py  server.py
hands/yahboom-mcp/src/yahboom_mcp/tools/: __init__.py  robot.py  speech.py
infra/: docker-compose.monitoring.yml  prometheus.yml  promtail.yml
infra/sandbox/: README.md  RoboFangSandbox.wsb  SANDBOX_DEV_SETUP_METHOD.md  Setup-RoboFangSandbox.ps1  srs.ps1
mcpb/: manifest.json  mcpb.json
robofang-hub/: index.html  package-lock.json  package.json  start-with-monitoring.bat  start.bat  start.ps1  tailwind.config.js  vite.config.ts
robofang-hub/src/: App.tsx  index.css
robofang-mcp/: README.md  pyproject.toml
robofang-mcp/src/robofang_mcp/: __init__.py  _bridge.py  server.py
robofang-mcp/src/robofang_mcp/skills/operator/: SKILL.md
robofang-mcp/src/robofang_mcp/skills/robofang-expert/: SKILL.md
robofang-mcp/webapp/: README.md
robofang-mcp/webapp/backend/: main.py  requirements.txt
robofang-mcp/webapp/frontend/: index.html  package-lock.json  package.json  vite.config.ts
robofang-mcp/webapp/frontend/src/: App.tsx  index.css
robofang-mcp/webapp/frontend/src/components/: AppLayout.tsx  ChatComposer.tsx  ChatThread.tsx  ComingSoonBadge.tsx  GlassCard.tsx  PulseBadge.tsx  StreamingConsole.tsx
robofang-mcp/webapp/frontend/src/utils/: cn.ts
scratch/: verify_v180.py
scripts/: README.md  analyze_fleet_fastmcp.py  council_benchmark.py  enable-rag-cpu.ps1  enable-rag-gpu.ps1  rag-gpu-env.ps1  rag-python.ps1  robofang_rag_reindex.py  run-rag-gpu.ps1  setup_service.ps1  test_council_alignment.py  test_heartbeat.py  test_sandbox_launch.py  test_sandbox_launch_v2.py  verify_connectors.ps1  verify_persistence.py  verify_rag.py
sessions/: resonite_engine.json
src/openfang/: main.py  (+4 more)
templates/: BODY.md  HEART.md  SOUL.md
tests/: README.md  __init__.py  conftest.py  hands_verification.py  pytest.ini  test_agentic_workflow.py  test_bridge_fleet.py  test_bridge_import.py  test_council_e2e.py  test_rag.py
tools/: _align_transport_ports.py  _apply_registry_mcp_ports.py  _bulk_fastmcp_bump.py  advance_council.py  agent_tools.py  arxiv_rag_bridge.py  arxiv_rag_bridge.py.backup  autonomous_council.py  bootstrap-sandbox.ps1  bootstrap.bat  channel_tools.py  cloud_council_bridge.py  context_generator.py  council_orchestrator.py  council_orchestrator.py.backup  digestor.py  equilibrium_synthesizer.py  finalize_round.py  heartbeat.ps1  osc_council_bridge.py  provision_agent.ps1  repo_stats.py  routing_tools.py  sandbox_dispatcher.py  sandbox_dispatcher.py.backup  skill_bridge.py  test_sandbox_task.py
(+330 files in other folders)
