[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robofang"
version = "0.1.0a1"
description = "RoboFang MCP & robotics orchestration hub"
requires-python = ">=3.11"
dependencies = [
    # Core runtime
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "websockets>=12",
    "psutil>=5.9",
    "pydantic>=2.7",
    "typer>=0.12.0",
    "rich>=13.7.1",

    # ── Comms connectors ────────────────────────────────────────────────────
    "discord.py>=2.3",         # DiscordConnector
    "slack-sdk>=3.27",         # SlackConnector (optional: pip install slack-sdk)

    # ── Physical device connectors ──────────────────────────────────────────
    "python-kasa>=0.7",        # TapoConnector  (smart plugs / cameras)
    "phue>=1.1",               # HueConnector   (Philips Hue)
    # ShellyConnector  — pure httpx, no extra dep
    # HomeAssistantConnector — pure httpx, no extra dep
    "ring-doorbell>=0.8",      # RingConnector

    # ── Media consumer connectors ────────────────────────────────────────────
    "plexapi>=4.15",           # PlexConnector
    # CalibreConnector — subprocess calibredb, no extra dep
    # EmailConnector   — stdlib smtplib + imaplib, no extra dep

    # MCP 3.1 (Unified Gateway)
    "fastmcp>=3.1.0",

    # Observability (Prometheus /metrics for bridge)
    "prometheus-fastapi-instrumentator>=7.0",

    # ── Protocol Extensions ──────────────────────────────────────────────────
    "python-osc>=1.8.3",       # OSC council bridge & A/V gear

    # RAG (in-repo; no external docs_mcp)
    "lancedb>=0.4.0",
    "fastembed>=0.3.0",

    # Hand manifest (HAND.toml parsing)
    "tomli>=2.0",

    # Installer + skills (YAML manifests and skill configs)
    "pyyaml>=6.0",

    # Repo watcher (file watcher; used by tools/scripts)
    "requests>=2.28",
    "watchdog>=3.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "httpx",
]
# Install everything including future connector deps
all = [
    "robofang[dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
robofang = ["configs/*.json"]

[project.scripts]
robofang            = "robofang.cli:main"
robofang-bridge     = "robofang.main:main"
robofang-supervisor = "robofang.supervisor:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
timeout = 30
markers = [
    "github: marks tests that clone from GitHub (deselect with -m 'not github')",
    "integration: marks tests that need network or external services (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Hardened v13.1 Rule Set
select = [
    "E", "F", "I", "UP", "B", "S", "A", "ANN", "COM", "C4", "DTZ", "PIE", "T20", "PYI", "Q", "RSE", "RET", "SLF", "SIM", "TID", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "PERF", "FURB", "LOG", "RUF"
]
ignore = [
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "COM812", # Trailing comma missing (handled by formatter)
    "ISC001", # Single line implicit string concatenation (handled by formatter)
    "PLR0913", # Too many arguments
    "S101",   # Use of assert (standard for pytest)
    "TRY003", # Avoid specifying long messages in exceptions
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "PLR", "TRY", "S105", "S106", "SLF001", "ARG002", "PLC0415"]
"server.py" = ["T20", "ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
