[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robofang-mcp"
version = "0.1.0a1"
description = "Thin MCP server for Cursor/Antigrav: converse with RoboFang bridge (FastMCP 3.1, sampling, prompts)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.27",
]

[project.scripts]
robofang-mcp = "robofang_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
robofang_mcp = ["skills/**"]
